samples/_failures_safe/1761700104_6b48d9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f7bcf81.c: In function ‘transform_bounds’:
./samples/SAFE/__tmp_5f7bcf81.c:128:47: error: incompatible types when initializing type ‘double’ using type ‘struct BoundingBox’
  128 |     corners[6] = (struct Vector3D){box.max.x, box
      |                                               ^~~
./samples/SAFE/__tmp_5f7bcf81.c:129: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_5f7bcf81.c:128:35: note: to match this ‘{’
  128 |     corners[6] = (struct Vector3D){box.max.x, box
      |                                   ^
./samples/SAFE/__tmp_5f7bcf81.c:128:26: error: expected declaration or statement at end of input
  128 |     corners[6] = (struct Vector3D){box.max.x, box
      |                          ^~~~~~~~
